# streamlit-schema-editor

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: databricks_mapping.py  er_diagram.py  playground.py  schema_viewer.py
streamlit_schema_editor/: __init__.py  _component.py  api.py  pyproject.toml  types.py
streamlit_schema_editor/frontend/: package-lock.json  package.json  preview.html  vite.config.ts
streamlit_schema_editor/frontend/src/: SchemaEditorCanvas.tsx  global.css  index.tsx  preview.tsx
streamlit_schema_editor/frontend/src/components/: base-handle.tsx  base-node.tsx  button-edge.tsx  database-schema-node.tsx  labeled-handle.tsx
streamlit_schema_editor/frontend/src/components/ui/: button.tsx  table.tsx
tests/: smoke_test.py  test_api.py  test_component_e2e.py
tests/fixtures/: e2e_app.py
